Modified DB connection string and removed AD connections for Localhost.

--- a/New DTAPP/appsettings.json
+++ b/New DTAPP/appsettings.json
@@ -6,7 +6,8 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Data Source=JFC-LTM-VMW2K16\\JIIFC;Database=New_DTAPP;user id=New_DTAPP;password=haUhR^YT$!!4Dhtr;TrustServerCertificate=True"
-  }
+    "ConnectionStrings": {
+        //"DefaultConnection": "Data Source=JFC-LTM-VMW2K16\\JIIFC;Database=New_DTAPP;user id=New_DTAPP;password=haUhR^YT$!!4Dhtr;TrustServerCertificate=True"
+        "DefaultConnection": "Server=Droussel-PC;Database=New_DTAPP;User Id=NEW_DTAPP;Password=1234;TrustServerCertificate=False"
+    }
 }
